<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/main_background"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/tipCD"
        android:text="@string/defaultTip"
        android:textColor="#ffffff"
        android:textSize="@dimen/textSize" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/appwidget_text"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="11dp"
        android:padding="8dp"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize3"
        android:textStyle="italic|bold"

        />

</RelativeLayout>