<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <LinearLayout
        android:id="@+id/second_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcoming_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/textLeft"
            android:gravity="center"
            android:maxWidth="@dimen/maxWidth"
            android:text="@string/welcoming_msg"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize2"
            android:textStyle="bold" />


        <Button
            android:id="@+id/workout"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="@dimen/textTop2"
            android:background="@drawable/mybutton"
            android:elevation="2dp"
            android:onClick="moveToWorkouts"
            android:paddingBottom="3dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="3dp"
            android:text="@string/workout_txt"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"

            />

        <Button
            android:id="@+id/so"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="@dimen/textTop2"
            android:background="@drawable/mybutton2"
            android:elevation="2dp"
            android:onClick="signOut"
            android:paddingBottom="3dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="3dp"
            android:text="@string/sign_out"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textSize"

            />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"

        >

    </com.google.android.gms.ads.AdView>
</android.support.design.widget.CoordinatorLayout>

