<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"

    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.haneenalawneh.extrafit.Authentication.LoginActivity">


        <ScrollView

            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/email_login_form"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/textTop"
                    android:fontFamily="serif"
                    android:text="@string/app_name"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/logoText"
                    android:textStyle="bold|italic" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColor"
                        android:textSize="@dimen/textSize"

                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textSize" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/mybutton"
                    android:elevation="2dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold"

                    />

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/sign_up_msg"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/email_sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/mybutton2"
                    android:elevation="2dp"
                    android:onClick="moveToSignUp"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold"

                    />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <ProgressBar

        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>