<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"

    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.haneenalawneh.extrafit.Authentication.SignUPActivity">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_frist_name"
                        android:imeOptions="flagNoExtractUi"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textSize" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_last_name"
                        android:imeOptions="flagNoExtractUi"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textSize" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textSize" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textSize" />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/email_sign_up_button"

                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/mybutton"
                    android:elevation="2dp"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>